New GUI, stream info added

--- a/TrayChatBot/App.config
+++ b/TrayChatBot/App.config
@@ -16,6 +16,12 @@
             <setting name="oauth" serializeAs="String">
                 <value>oauth:ode4ae72109les22ezesvr2rsk202s</value>
             </setting>
+            <setting name="clientid" serializeAs="String">
+                <value>njjaoh5y4rjap9vtwcac3e6y3j8pvj4</value>
+            </setting>
+            <setting name="apptoken" serializeAs="String">
+                <value>zip8gno3lr6xh2r74wicjsr59q4tmn</value>
+            </setting>
         </TrayChatBot.Properties.Settings>
     </userSettings>
 </configuration>
