--- a/TrayChatBot/packages.config
+++ b/TrayChatBot/packages.config
@@ -16,6 +16,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="TwitchLib" version="1.6.1" targetFramework="net461" />
   <package id="WebSocket4Net" version="0.15.0" targetFramework="net461" />
 </packages>
